[package]
name = "libfdu"
version = "0.1.0"
edition = "2021"
author = ["w568w", "hasbai", "Dest1n1", "KYLN24", "Frankstein73", "JingYiJun"]
build = "build.rs"

[lib]
# 指定编译类型为 C 风格的动态链接库（C Dynamic Library）
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
# 生成头文件
cbindgen = "0.24.2"

[dependencies]
dotenv = "0.15.0"
# 提供 C 类型
libc = "0.2.132"
# 阻塞的网络请求库
reqwest = { version = "0.11.11", features = ["blocking", "json", "cookies"] }
scraper = "0.13.0"
tokio = "1.20.1"
